[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "update-personal-photonotes"
version = "0.8.1"
description = "Update Flickr Photo-Notes in Evernote (bases on evernote-backup)"
authors = ["freyp567 <freyp567@gmail.com>"]
readme = "README.md"
include = ["CHANGELOG.md"]
packages = [{include = "update_photonotes"}]

[tool.poetry.scripts]
evernote-backup = "update_photonotes.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
evernote-backup = "^1.9.2"
lxml = "^4.9.3"
flickr-api = "^0.7.7"
requests-cache = "^1.0.1"
fake-useragent = "^1.1.3"
pyclip = "^0.7.0"
ratelimit = "^2.2.1"
python-dotenv = "^1.0.0"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

